# rust_ddd_study

./: Cargo.toml
application/: Cargo.toml
application/src/: lib.rs
application/src/ability/: mod.rs
application/src/ability/share/: base_ability.rs  mod.rs
application/src/ability/user/: mod.rs  user_create_ability.rs
application/src/ability/user/cmd/: create_user_ability_command.rs  mod.rs
application/src/query/: mod.rs
base/: Cargo.toml
base/src/model/: mod.rs
base/src/model/ddd/: aggregate_root.rs  application_service.rs  command.rs  domain_service.rs  entity.rs  marker_interface.rs  mod.rs  repository.rs  value_object.rs
base/src/model/result/: base_uuid_entity.rs  mod.rs
domain/: Cargo.toml
domain/src/: lib.rs
domain/src/aggregate/role/model/: role.rs
domain/src/aggregate/user/: mod.rs
domain/src/share/: mod.rs
domain/src/share/event/: base_domain_event.rs  domain_event_enum.rs  enent_status_enum.rs  idomain_event_publisher.rs  idomain_event_repository.rs  mod.rs
domain/src/share/valueobject/: address.rs
infrastructure/: Cargo.toml
infrastructure/src/: lib.rs
infrastructure/src/db/: mod.rs
infrastructure/src/db/converter/: mod.rs  user_converter.rs
infrastructure/src/db/model/: mod.rs  role_po.rs  user_po.rs
infrastructure/src/db/repository/: mod.rs  role_repository_impl.rs  user_repository_impl.rs
infrastructure/src/event/: domain_event_publisher.rs  domain_event_repository.rs  mod.rs
interaction/: Cargo.toml
interaction/src/: lib.rs
interaction/src/handler/: user_event_handler.rs
(+13 files in other folders)
