[package]
name = "ddd-study"
version = "0.1.0"
edition = "2021"

[workspace]
members=["base","domain","infrastructure","application"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
chrono = "0.4"
anyhow="1"
serde = "1.0"
serde_json="1.0"