[package]
name = "ddd-study"
version = "0.1.0"
edition = "2021"

[workspace]
members=["base","domain","infrastructure","application","interaction"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace.dependencies]
chrono = "0.4"
anyhow="1"
serde = "1.0"
serde_json="1.0"
async-trait = "0.1"
uuid = {version="1",features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]}