[package]
name = "application"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base={path="../base"}
domain={path="../domain"}
chrono = {workspace=true}
anyhow={workspace=true}
async-trait = {workspace=true}